include $(top_srcdir)/make.inc

noinst_LTLIBRARIES = libINT.la

libINT_la_SOURCES = \
  BraHRR1010.F90 \
  BraHRR101.F90 \
  BraHRR102.F90 \
  BraHRR103.F90 \
  BraHRR106.F90 \
  BraHRR110.F90 \
  BraHRR11.F90 \
  BraHRR12.F90 \
  BraHRR13.F90 \
  BraHRR16.F90 \
  BraHRR210.F90 \
  BraHRR21.F90 \
  BraHRR22.F90 \
  BraHRR23.F90 \
  BraHRR26.F90 \
  BraHRR310.F90 \
  BraHRR31.F90 \
  BraHRR32.F90 \
  BraHRR33.F90 \
  BraHRR36.F90 \
  BraHRR610.F90 \
  BraHRR61.F90 \
  BraHRR62.F90 \
  BraHRR63.F90 \
  BraHRR66.F90 \
  IntB10010101.F90 \
  IntB10010201.F90 \
  IntB10010202.F90 \
  IntB10010301.F90 \
  IntB10010302.F90 \
  IntB10010303.F90 \
  IntB10010601.F90 \
  IntB10010602.F90 \
  IntB10010603.F90 \
  IntB10010606.F90 \
  IntB10011001.F90 \
  IntB10020101.F90 \
  IntB10020201.F90 \
  IntB10020202.F90 \
  IntB10020301.F90 \
  IntB10020302.F90 \
  IntB10020303.F90 \
  IntB10020601.F90 \
  IntB10020602.F90 \
  IntB10020603.F90 \
  IntB10020606.F90 \
  IntB10021001.F90 \
  IntB10021002.F90 \
  IntB10030101.F90 \
  IntB10030201.F90 \
  IntB10030202.F90 \
  IntB10030301.F90 \
  IntB10030302.F90 \
  IntB10030303.F90 \
  IntB10030601.F90 \
  IntB10030602.F90 \
  IntB10030603.F90 \
  IntB10030606.F90 \
  IntB10031001.F90 \
  IntB10031002.F90 \
  IntB10031003.F90 \
  IntB10060101.F90 \
  IntB10060201.F90 \
  IntB10060202.F90 \
  IntB10060301.F90 \
  IntB10060302.F90 \
  IntB10060303.F90 \
  IntB10060601.F90 \
  IntB10060602.F90 \
  IntB10060603.F90 \
  IntB10060606.F90 \
  IntB10061001.F90 \
  IntB10061002.F90 \
  IntB10061003.F90 \
  IntB10061006.F90 \
  IntB10100101.F90 \
  IntB10100201.F90 \
  IntB10100202.F90 \
  IntB10100301.F90 \
  IntB10100302.F90 \
  IntB10100303.F90 \
  IntB10100601.F90 \
  IntB10100602.F90 \
  IntB10100603.F90 \
  IntB10100606.F90 \
  IntB10101001.F90 \
  IntB10101002.F90 \
  IntB10101003.F90 \
  IntB10101006.F90 \
  IntB10101010.F90 \
  IntB1010101.F90 \
  IntB2010101.F90 \
  IntB2010201.F90 \
  IntB2020101.F90 \
  IntB2020201.F90 \
  IntB2020202.F90 \
  IntB3010101.F90 \
  IntB3010201.F90 \
  IntB3010202.F90 \
  IntB3010301.F90 \
  IntB3020101.F90 \
  IntB3020201.F90 \
  IntB3020202.F90 \
  IntB3020301.F90 \
  IntB3020302.F90 \
  IntB3030101.F90 \
  IntB3030201.F90 \
  IntB3030202.F90 \
  IntB3030301.F90 \
  IntB3030302.F90 \
  IntB3030303.F90 \
  IntB6010101.F90 \
  IntB6010201.F90 \
  IntB6010202.F90 \
  IntB6010301.F90 \
  IntB6010302.F90 \
  IntB6010303.F90 \
  IntB6010601.F90 \
  IntB6020101.F90 \
  IntB6020201.F90 \
  IntB6020202.F90 \
  IntB6020301.F90 \
  IntB6020302.F90 \
  IntB6020303.F90 \
  IntB6020601.F90 \
  IntB6020602.F90 \
  IntB6030101.F90 \
  IntB6030201.F90 \
  IntB6030202.F90 \
  IntB6030301.F90 \
  IntB6030302.F90 \
  IntB6030303.F90 \
  IntB6030601.F90 \
  IntB6030602.F90 \
  IntB6030603.F90 \
  IntB6060101.F90 \
  IntB6060201.F90 \
  IntB6060202.F90 \
  IntB6060301.F90 \
  IntB6060302.F90 \
  IntB6060303.F90 \
  IntB6060601.F90 \
  IntB6060602.F90 \
  IntB6060603.F90 \
  IntB6060606.F90

EXTRA_DIST = \
  ERIInclude.Inc \
  ERIInterfaceB.Inc \
  ERIListInterfaceB.Inc

EXTRA_INCLUDES = -I$(builddir)/../MSC
